--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-redux",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Next.js Redux coupling",
   "keywords": [
     "next",
@@ -12,7 +12,7 @@
   "author": "Mark Vasilkov (https://github.com/mvasilkov)",
   "license": "MIT",
   "peerDependencies": {
-    "next": "^8.0.0",
+    "next": "^8.0.0 || ^9.0.0",
     "react": "^16.0.0",
     "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "^4.0.0"
