--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "next-redux",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Next.js Redux coupling",
   "keywords": [
     "next",
     "react",
-    "redux"
+    "redux",
+    "no-dependencies"
   ],
   "main": "app.js",
   "repository": "https://github.com/mvasilkov/next-redux",
